--- a/sass-js/scss/styles.scss
+++ b/sass-js/scss/styles.scss
@@ -710,7 +710,7 @@ header {
     > * {
       margin: 0 0.5rem 2rem 0.5rem;
     }
-    img {
+    img, video {
       width: 100%;
       max-height: 40rem;
       object-fit: contain;
@@ -1298,7 +1298,7 @@ form {
     #post {
       margin: 6rem 0;
       width: 70%;
-      img {
+      img, video {
         border-radius: 2rem;
       }
     }
