--- a/sass-js/scss/styles.scss
+++ b/sass-js/scss/styles.scss
@@ -884,6 +884,7 @@ form {
   margin: 0 0;
   .carousel-indicators {
     bottom: -4rem;
+    margin: 0 0 1rem 0;
     button {
       width: 0.8rem;
       height: 0.8rem;
